syntax = "proto3";

package Protocol;

import "enum.proto";

message PosInfo
{
	string objectId = 1;
	float x = 2;
	float y = 3;
}

message ObjectInfo
{
	PosInfo posInfo = 1;
	ObjectType objectType = 2; //OBJECT_TYPE_CREATURE, OBJECT_TYPE_PROJECTILE, OBJECT_TYPE_ENV;
}

message UserInfo
{
	string userId = 1;             // 유저 ID (UUID, 16바이트)
	string nickname  = 2;	  //유저 닉네임
}

message RoomInfo
{
	uint32 roomId = 1; //방 ID
	string roomName = 2; // 방 이름
	uint32 currentPlayers = 3; //현재 인원 수
	uint32 maxPlayers = 4; //최대 인원 수
}
